# StoX

./: LICENSE  Readme.txt
source/: CMakeLists.txt  main.cpp  stox.cpp  stox.h  stox.qrc  stox.rc  stox.ui
